--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/eye.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Repo Viewer</title>
+    <meta name="description" content="A github repository displaying app that displays the repository of victor ubere"/>
+    <meta name="robots" content="noindex, follow"/>
+
+    <title>github repository list</title>
   </head>
   <body>
     <div id="root"></div>
