--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/eye.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A github repository displaying app that displays the repository of victor ubere"/>
-    <meta name="robots" content="noindex, follow"/>
+    <meta name="description" content="A github repository displaying app that displays the repository of victor ubere"
+    data-rh="true"/>
+    
 
     <title>github repository list</title>
   </head>
